Hatsune Miku Project Diva, Black Rock Shooter, DJ Max Black Square, DJ Max Fever

--- a/Sys/GameSettings/ULKS46189.ini
+++ b/Sys/GameSettings/ULKS46189.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10403 - DJMAX Fever
+﻿# ULKS46189 - DJMAX PORTABLE BLACK SQUARE
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.500000
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 4
-VRIssues = first intro screen, 2D game, no depth, inconsistent scale
+VRIssues = text doesn't fit in text boxes, 2D game, no depth, inconsistent scale
