--- a/Sys/GameSettings/ULJM05472.ini
+++ b/Sys/GameSettings/ULJM05472.ini
@@ -1,19 +1,19 @@
-﻿# ULUS10403 - DJMAX Fever
+﻿# ULJM05472 - Hatsune Miku - 初音ミク -Project DIVA-
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
-MinFOV = 0.000000
-ScreenHeight = 1.9
+UnitsPerMetre = 3.28
+HudThickness = 0.5
+HudDistance = 1.3
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+MinFOV = 20.0
+ScreenHeight = 2.0
 ScreenThickness = 0.5
-ScreenDistance = 2.0
+ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
-TelescopeMaxFOV = 0.000000
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -23,12 +23,12 @@ Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
-ReadPitch = 0.000000
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = first intro screen, 2D game, no depth, inconsistent scale
+VRStateId = 3
+VRIssues = note depth, camera angles
