--- a/Sys/GameSettings/ULUS10563.ini
+++ b/Sys/GameSettings/ULUS10563.ini
@@ -1,17 +1,17 @@
-﻿# ULES00851, ULUS10266, ULJM05156, ULAS42110, ULKS46152 - MONSTER HUNTER FREEDOM™ 2
+﻿# ULUS10563, ULES01519, ULJS00350, NPJH50352 - GODS EATER BURST
 [VR]
-UnitsPerMetre = 100.0
+UnitsPerMetre = 64.0
 HudThickness = 0.5
-HudDistance = 2.0
+HudDistance = 1.4
 CameraForward = 0.0
-CameraPitch = 15.0
-AimDistance = 7.0
-MinFOV = 0.0
-ScreenHeight = 2.0
+CameraPitch = 0.0
+AimDistance = 4.0
+MinFOV = 20.0
+ScreenHeight = 1.9
 ScreenThickness = 0.5
-ScreenDistance = 1.5
+ScreenDistance = 2.0
 ScreenRight = 0.0
-ScreenUp = 0.0
+ScreenUp = -0.3
 ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 4
-VRIssues = intro videos stuck in top left corner, culling
+VRIssues = camera angles, small text
