--- a/Sys/GameSettings/ULAS40129.ini
+++ b/Sys/GameSettings/ULAS40129.ini
@@ -1,6 +1,6 @@
 ﻿# UCUS98700, UCUS98706, UCJS10048, UCAS40129, ULAS40129, UCJX90019, UCJS18014 - JEANNE D'ARC
 [VR]
-UnitsPerMetre = 5.0
+UnitsPerMetre = 7.0
 HudThickness = 0.5
 HudDistance = 20.0
 CameraForward = 0.0
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 1
-VRIssues = 2D people drawn on HUD with doubled head tracking, inconsistent scale
+VRIssues = people drawn on HUD with doubled head tracking, inconsistent scale
