DJMax Clazziquai, DJMax Portable 3, and DJMax Portable Black Square

--- a/Sys/GameSettings/ULKS46236.ini
+++ b/Sys/GameSettings/ULKS46236.ini
@@ -1,4 +1,4 @@
-﻿# ULKS46189, ULJM06034 - DJMAX PORTABLE BLACK SQUARE
+﻿# ULKS46236, ULUS10538, ULJM05836 - DJMax Portable 3 - Patched & Uploaded By Kiss Of Death
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.500000
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 4
-VRIssues = text doesn't fit in text boxes, 2D game, no depth, inconsistent scale
+VRIssues = 2D game, no depth, inconsistent scale
