--- a/Sys/GameSettings/ULJM05836.ini
+++ b/Sys/GameSettings/ULJM05836.ini
@@ -1,19 +1,19 @@
-﻿# ULKS46189, ULJM06034 - DJMAX PORTABLE BLACK SQUARE
+﻿# ULKS46236, ULUS10538, ULJM05836 - DJMax Portable 3 - Patched & Uploaded By Kiss Of Death
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
-MinFOV = 0.000000
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.9
 ScreenThickness = 0.5
 ScreenDistance = 2.0
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
-TelescopeMaxFOV = 0.000000
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -23,7 +23,7 @@ Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
-ReadPitch = 0.000000
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 4
-VRIssues = text doesn't fit in text boxes, 2D game, no depth, inconsistent scale
+VRIssues = 2D game, no depth, inconsistent scale
