--- a/Sys/GameSettings/ULKS46190.ini
+++ b/Sys/GameSettings/ULKS46190.ini
@@ -1,4 +1,4 @@
-﻿# ULKS46189, ULJM06034 - DJMAX PORTABLE BLACK SQUARE
+﻿# ULKS46190 - DJMAX PORTABLE CLAZZIQUAI EDITION
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.500000
