Fix Gitaroo Man Lives stars not showing up in game list.

--- a/Sys/GameSettings/ULES00383.ini
+++ b/Sys/GameSettings/ULES00383.ini
@@ -30,6 +30,6 @@ Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRState = 4
+VRStateID = 4
 VRIssues = 
  
