--- a/Sys/GameSettings/ULKS46071.ini
+++ b/Sys/GameSettings/ULKS46071.ini
@@ -30,6 +30,6 @@ Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRState = 4
+VRStateID = 4
 VRIssues = 
  
