Partial culling codes for BattleZone (USA). Move camera forward in BattleZone to reduce motion sickness.

--- a/Sys/GameSettings/ULUS10156.ini
+++ b/Sys/GameSettings/ULUS10156.ini
@@ -2,14 +2,14 @@
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.500000
-HudDistance = 2.000000
-CameraForward = 0.000000
+HudDistance = 4.000000
+CameraForward = 14.000000
 CameraPitch = 0.000000
-AimDistance = 16.000000
+AimDistance = 40.000000
 MinFOV = 0.0
-ScreenHeight = 2.000000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
+ScreenHeight = 2.0
+ScreenThickness = 0.3
+ScreenDistance = 2.0
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -31,4 +31,13 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 3
-VRIssues = Culling
+VRIssues = still some culling, motion sickness
+
+[VRCheats]
+_C1 reduce object culling
+_L 0x201A3C44 0x20020001
+_L 0x201A3C4C 0x00000000
+_L 0x201A3C50 0x00000000
+_C1 reduce terrain culling
+_L 0x201A7800 0x0A269E05
+_L 0x201A7814 0x00000000
