--- a/Sys/GameSettings/ULES00522.ini
+++ b/Sys/GameSettings/ULES00522.ini
@@ -2,14 +2,14 @@
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.500000
-HudDistance = 2.000000
-CameraForward = 0.000000
+HudDistance = 4.000000
+CameraForward = 14.000000
 CameraPitch = 0.000000
-AimDistance = 16.000000
+AimDistance = 40.000000
 MinFOV = 0.0
-ScreenHeight = 2.000000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
+ScreenHeight = 2.0
+ScreenThickness = 0.3
+ScreenDistance = 2.0
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 3
-VRIssues = Culling
+VRIssues = Culling, motion sickness
