--- a/Sys/GameSettings/ULJS00018.ini
+++ b/Sys/GameSettings/ULJS00018.ini
@@ -1,6 +1,6 @@
-﻿# ULUS10419, ULES01237, ULJM08027, ULJM05425, ULJM05471 - Tenchu: Shadow Assassins
+﻿# ULES00277, ULJS00018, ULJS19007, UCAS40092, UCAS40020 - Tenchu Time of the Assassins (Shinobi Taizen) - Tenchu: TOTA
 [VR]
-UnitsPerMetre = 10.0
+UnitsPerMetre = 100.0
 HudThickness = 0.3
 HudDistance = 1.6
 CameraForward = 0.0
@@ -30,5 +30,5 @@ Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 3
-VRIssues = heavy culling, compass floating, 30 FPS
+VRStateID = 4
+VRIssues = minor culling of characters near camera, very minor culling, fire in menu is too close, 30 FPS
