Remove anything Oculus-specific from the main emulator.

--- a/GPU/GPU.vcxproj.filters
+++ b/GPU/GPU.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClInclude Include="Common\BruteForce.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="Common\VROculus.h">
+      <Filter>Common</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Math3D.cpp">
