Culling codes for Key of Heaven (Korean) UCKS45011 aka Chun Ji Moon 1 aka Tenchi no Mon.

--- a/Sys/GameSettings/UCKS45011.ini
+++ b/Sys/GameSettings/UCKS45011.ini
@@ -31,4 +31,12 @@ OverrideClearColor = True
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 4
-VRIssues = culling, cutscenes partly blocked by HUD, can see backstage
+VRIssues = cutscenes partly blocked by HUD, can see backstage, NPC culling
+
+[VRCheats]
+_C1 disable culling terrain
+_L 0x201ceed4 0x03E00008
+_L 0x201ceed8 0x20020001
+_C0 enable culling terrain
+_L 0x201ceed4 0x27BDFFF0
+_L 0x201ceed8 0x2407003F
